# starter_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Makefile  README.md  bootstrap_mechanism_discussion.md  build.rs  code_structure.md  cryptographic_requirements.md  detailed_implementation_plan.md  error_handling_guidelines.md  implementation_plan.md  main.cpp  message_relaying_anonymity.md  node_failure_and_churn_protocol.md  performance_optimization_guide.md  relay_protocol_spec.md  reproduce.bat  reproduce.sh  security_audit_checklist.md  transport_layer_spec.md
.cargo/: config.toml
.github/workflows/: cmake-multi-platform.yml
cmake/: CPM.cmake  MSVCToolchain.cmake  msvc_config.cmake
cmake/modules/: BinaryOptimizations.cmake  BuildHardening.cmake  Fetch7Zip.cmake  FetchNinja.cmake  FetchZig.cmake  HermeticDependencies.cmake
cmake/toolchains/: common.cmake  darwin-arm64.cmake  darwin-x86_64.cmake  linux-x86_64.cmake  windows-x86_64.cmake
scripts/: hexdiff.ps1  set_pe_timestamp.ps1  set_pe_timestamp.sh
src/: foo.cpp  main.c  main.cpp  main.rs  minimal_main.cpp
src/crypto/: mod.rs
src/runtime/: loader.c  loader.h  printf.c
test/: CMakeLists.txt  test_foo.cpp
tests/: main_test.cpp
