cargo-features = ["profile-rustflags"]

[package]
name = "hello"
version = "0.1.0"
edition = "2024"

[dependencies]
ring = "0.17"
x25519-dalek = "2.0"
aes-gcm = { version = "0.10", features = ["std"] }
rand = "0.9"
rand_core = { version = "0.6", features = ["std"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.minsizerel]
inherits = "release"     # Inherit from release profile
opt-level = "z"         # Optimize aggressively for size
lto = "fat"
debug = false           # No debug info
strip = "symbols"       # Most aggressive symbol stripping
incremental = false     # Disable incremental compilation
rpath = false          # Disable runtime path

[build-dependencies]
thunk-rs = { version = "0.3.3"}
